cmake_minimum_required(VERSION 3.0.0)
project(camera VERSION 0.1.0)

include(CTest)
enable_testing()
find_package(OpenCV REQUIRED)
find_package(OpenMP)
add_executable(camera main.cpp   picture_ex.h picture_ex.cpp jibian.cpp jibian.h sgm.cpp sgm.h hole.h hole.cpp)
target_link_libraries(camera ${OpenCV_LIBS}  OpenMP::OpenMP_CXX)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
